--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,8 @@
 			<h3>uptime</h3><pre><div id="raw_uptime"></div></pre>
 			<h3>df</h3><pre><div id="raw_df"></div></pre>
 			<h3>iostat</h3><pre><div id="raw_iostat"></div></pre>
+			<h3>netstat (UDP)</h3><pre><div id="raw_netstat_udp"></div></pre>
+			<h3>netstat (TCP)</h3><pre><div id="raw_netstat_tcp"></div></pre>
 		</div>
 		<div class="col-md-6">
 			<h3>ifconfig</h3><pre><div id="raw_ifconfig"></div></pre>
@@ -36,6 +38,8 @@
 			$('#raw_df').load('/raw/df');
 			$('#raw_iostat').load('/raw/iostat');
 			$('#raw_ifconfig').load('/raw/ifconfig');
+			$('#raw_netstat_udp').load('/raw/netstatUdp');
+			$('#raw_netstat_tcp').load('/raw/netstatTcp');
 		}
 
 		refresh();
