--- a/templates/configuration.html
+++ b/templates/configuration.html
@@ -7,30 +7,27 @@
 </head>
 <body>
 <div class="container" style="width: 90%%">
-	<h1>Probe - %(hostname)s</h1>
+	<h1>Probe - %(hostname)s Configuration</h1>
 
 	<button class="btn btn-success" onclick="javascript:refresh()">
 		<span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
 		Refresh
 	</button>
 
-	<form action="/configuration" style="display: inline; padding-left: 20px">
-	<button class="btn btn-info" onclick="javascript:refresh()">
-		<span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
-		Configuration
+	<form action="/" style="display: inline; padding-left: 20px">
+	<button class="btn btn-primary" onclick="javascript:refresh()">
+		<span class="glyphicon glyphicon-home" aria-hidden="true"></span>
+		Status
 	</button>
 	</form>
 
+	<h3>uname</h3><pre><div id="raw_uname"></div></pre>
+
 	<div class="row">
 		<div class="col-md-6">
-			<h3>date</h3><pre><div id="raw_date"></div></pre>
-			<h3>uptime</h3><pre><div id="raw_uptime"></div></pre>
-			<h3>df</h3><pre><div id="raw_df"></div></pre>
-			<h3>iostat</h3><pre><div id="raw_iostat"></div></pre>
-			<h3>netstat (UDP)</h3><pre><div id="raw_netstat_udp"></div></pre>
+			<h3>ifconfig</h3><pre><div id="raw_ifconfig"></div></pre>
 		</div>
 		<div class="col-md-6">
-			<h3>netstat (TCP)</h3><pre><div id="raw_netstat_tcp"></div></pre>
 		</div>
 	</div>
 
@@ -38,12 +35,8 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 	<script>
 		function refresh() {
-			$('#raw_date').load('/raw/date');
-			$('#raw_uptime').load('/raw/uptime');
-			$('#raw_df').load('/raw/df');
-			$('#raw_iostat').load('/raw/iostat');
-			$('#raw_netstat_udp').load('/raw/netstatUdp');
-			$('#raw_netstat_tcp').load('/raw/netstatTcp');
+			$('#raw_uname').load('/raw/uname');
+			$('#raw_ifconfig').load('/raw/ifconfig');
 		}
 
 		refresh();
