--- a/templates/configuration.html
+++ b/templates/configuration.html
@@ -3,11 +3,11 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
 
-	<title>Probe - %(hostname)s</title>
+	<title>Probe - Configuration [%(hostname)s]</title>
 </head>
 <body>
 <div class="container" style="width: 90%%">
-	<h1>Probe - %(hostname)s Configuration</h1>
+	<h1>Probe - Configuration [<tt>%(hostname)s</tt>]</h1>
 
 	<button class="btn btn-success" onclick="javascript:refresh()">
 		<span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
@@ -21,13 +21,14 @@
 	</button>
 	</form>
 
-	<h3>uname</h3><pre><div id="raw_uname"></div></pre>
+	<h3><tt>uname</tt></h3><pre><div id="raw_uname"></div></pre>
 
 	<div class="row">
 		<div class="col-md-6">
-			<h3>ifconfig</h3><pre><div id="raw_ifconfig"></div></pre>
+			<h3><tt>ifconfig</tt></h3><pre><div id="raw_ifconfig"></div></pre>
 		</div>
 		<div class="col-md-6">
+			<h3><tt>mount</tt></h3><pre><div id="raw_mount"></div></pre>
 		</div>
 	</div>
 
@@ -37,6 +38,7 @@
 		function refresh() {
 			$('#raw_uname').load('/raw/uname');
 			$('#raw_ifconfig').load('/raw/ifconfig');
+			$('#raw_mount').load('/raw/mount');
 		}
 
 		refresh();
