--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,11 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
 
-	<title>Probe - %(hostname)s</title>
+	<title>Probe [%(hostname)s]</title>
 </head>
 <body>
 <div class="container" style="width: 90%%">
-	<h1>Probe - %(hostname)s</h1>
+	<h1>Probe [<tt>%(hostname)s</tt>]</h1>
 
 	<button class="btn btn-success" onclick="javascript:refresh()">
 		<span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
@@ -23,14 +23,14 @@
 
 	<div class="row">
 		<div class="col-md-6">
-			<h3>date</h3><pre><div id="raw_date"></div></pre>
-			<h3>uptime</h3><pre><div id="raw_uptime"></div></pre>
-			<h3>df</h3><pre><div id="raw_df"></div></pre>
-			<h3>iostat</h3><pre><div id="raw_iostat"></div></pre>
-			<h3>netstat (UDP)</h3><pre><div id="raw_netstat_udp"></div></pre>
+			<h3><tt>date</tt></h3><pre><div id="raw_date"></div></pre>
+			<h3><tt>uptime</tt></h3><pre><div id="raw_uptime"></div></pre>
+			<h3><tt>df</tt></h3><pre><div id="raw_df"></div></pre>
+			<h3><tt>iostat</tt></h3><pre><div id="raw_iostat"></div></pre>
+			<h3><tt>netstat</tt> (UDP)</h3><pre><div id="raw_netstat_udp"></div></pre>
 		</div>
 		<div class="col-md-6">
-			<h3>netstat (TCP)</h3><pre><div id="raw_netstat_tcp"></div></pre>
+			<h3><tt>netstat</tt> (TCP)</h3><pre><div id="raw_netstat_tcp"></div></pre>
 		</div>
 	</div>
 
