Added a help page

--- a/templates/configuration.html
+++ b/templates/configuration.html
@@ -15,9 +15,16 @@
 	</button>
 
 	<form action="/" style="display: inline; padding-left: 20px">
-	<button class="btn btn-primary" onclick="javascript:refresh()">
+	<button class="btn btn-primary">
 		<span class="glyphicon glyphicon-home" aria-hidden="true"></span>
 		Status
+	</button>
+	</form>
+
+	<form action="/help" style="display: inline; padding-left: 20px">
+	<button class="btn btn-warning">
+		<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+		Help
 	</button>
 	</form>
 
