--- a/templates/index.html
+++ b/templates/index.html
@@ -15,9 +15,16 @@
 	</button>
 
 	<form action="/configuration" style="display: inline; padding-left: 20px">
-	<button class="btn btn-info" onclick="javascript:refresh()">
+	<button class="btn btn-info">
 		<span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
 		Configuration
+	</button>
+	</form>
+
+	<form action="/help" style="display: inline; padding-left: 20px">
+	<button class="btn btn-warning">
+		<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
+		Help
 	</button>
 	</form>
 
