--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 
 	<button class="btn btn-success" onclick="javascript:refresh()">
 		<span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
-		Refresh
+		Refresh All
 	</button>
 	<input id="autoRefreshCheckbox" type="checkbox" onclick="javascript:autoRefresh()"> Automatic
 
@@ -31,27 +31,56 @@
 
 	<div class="row">
 		<div class="col-md-6">
-			<h3><tt>date</tt></h3><pre><div id="raw_date"></div></pre>
-			<h3><tt>uptime</tt></h3><pre><div id="raw_uptime"></div></pre>
-			<h3><tt>df</tt></h3><pre><div id="raw_df"></div></pre>
-			<h3><tt>iostat</tt></h3><pre><div id="raw_iostat"></div></pre>
-			<h3><tt>netstat</tt> (UDP)</h3><pre><div id="raw_netstat_udp"></div></pre>
+			<h3>
+				<tt>date</tt>
+				<button class="btn btn-success" onclick="javascript:refreshDate()"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
+			</h3>
+			<pre><div id="raw_date"></div></pre>
+
+			<h3><tt>uptime</tt>
+				<button class="btn btn-success" onclick="javascript:refreshUptime()"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
+			</h3>
+			<pre><div id="raw_uptime"></div></pre>
+
+			<h3><tt>df</tt>
+				<button class="btn btn-success" onclick="javascript:refreshDf()"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
+			</h3>
+			<pre><div id="raw_df"></div></pre>
+
+			<h3><tt>iostat</tt>
+				<button class="btn btn-success" onclick="javascript:refreshIostat()"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
+			</h3>
+			<pre><div id="raw_iostat"></div></pre>
+
+			<h3><tt>netstat</tt> (UDP)
+				<button class="btn btn-success" onclick="javascript:refreshNetstatUdp()"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
+			</h3>
+			<pre><div id="raw_netstat_udp"></div></pre>
 		</div>
 		<div class="col-md-6">
-			<h3><tt>netstat</tt> (TCP)</h3><pre><div id="raw_netstat_tcp"></div></pre>
+			<h3><tt>netstat</tt> (TCP)
+				<button class="btn btn-success" onclick="javascript:refreshNetstatTcp()"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
+			</h3><pre><div id="raw_netstat_tcp"></div></pre>
 		</div>
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 	<script>
+		function refreshDate() { $('#raw_date').load('/raw/date'); }
+		function refreshUptime() { $('#raw_uptime').load('/raw/uptime'); }
+		function refreshDf() { $('#raw_df').load('/raw/df'); }
+		function refreshIostat() { $('#raw_iostat').load('/raw/iostat'); }
+		function refreshNetstatTcp() { $('#raw_netstat_tcp').load('/raw/netstatTcp'); }
+		function refreshNetstatUdp() { $('#raw_netstat_udp').load('/raw/netstatUdp'); }
+
 		function refresh() {
-			$('#raw_date').load('/raw/date');
-			$('#raw_uptime').load('/raw/uptime');
-			$('#raw_df').load('/raw/df');
-			$('#raw_iostat').load('/raw/iostat');
-			$('#raw_netstat_udp').load('/raw/netstatUdp');
-			$('#raw_netstat_tcp').load('/raw/netstatTcp');
+			refreshDate();
+			refreshUptime();
+			refreshDf();
+			refreshIostat();
+			refreshNetstatUdp();
+			refreshNetstatTcp();
 		}
 
 		function autoRefresh() {
