Cleaned up refreshing interface

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,10 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
 
+	<style type="text/css">
+	span.refreshButton { font-size: small; text-align: right; float: right; position: relative; top: 6pt }
+	</style>
+
 	<title>Probe [%(hostname)s]</title>
 </head>
 <body>
@@ -31,35 +35,34 @@
 
 	<div class="row">
 		<div class="col-md-6">
-			<h3>
-				<tt>date</tt>
-				<button class="btn btn-success" onclick="javascript:refreshDate()"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
+			<h3><tt>date</tt>
+				<span class="glyphicon glyphicon-refresh refreshButton" aria-hidden="true" onclick="javascript:refreshDate()"></span>
 			</h3>
 			<pre><div id="raw_date"></div></pre>
 
 			<h3><tt>uptime</tt>
-				<button class="btn btn-success" onclick="javascript:refreshUptime()"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
+				<span class="glyphicon glyphicon-refresh refreshButton" aria-hidden="true" onclick="javascript:refreshUptime()"></span>
 			</h3>
 			<pre><div id="raw_uptime"></div></pre>
 
 			<h3><tt>df</tt>
-				<button class="btn btn-success" onclick="javascript:refreshDf()"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
+				<span class="glyphicon glyphicon-refresh refreshButton" aria-hidden="true" onclick="javascript:refreshDf()"></span>
 			</h3>
 			<pre><div id="raw_df"></div></pre>
 
 			<h3><tt>iostat</tt>
-				<button class="btn btn-success" onclick="javascript:refreshIostat()"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
+				<span class="glyphicon glyphicon-refresh refreshButton" aria-hidden="true" onclick="javascript:refreshIostat()"></span>
 			</h3>
 			<pre><div id="raw_iostat"></div></pre>
 
 			<h3><tt>netstat</tt> (UDP)
-				<button class="btn btn-success" onclick="javascript:refreshNetstatUdp()"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
+				<span class="glyphicon glyphicon-refresh refreshButton" aria-hidden="true" onclick="javascript:refreshNetstatUdp()"></span>
 			</h3>
 			<pre><div id="raw_netstat_udp"></div></pre>
 		</div>
 		<div class="col-md-6">
 			<h3><tt>netstat</tt> (TCP)
-				<button class="btn btn-success" onclick="javascript:refreshNetstatTcp()"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
+				<span class="glyphicon glyphicon-refresh refreshButton" aria-hidden="true" onclick="javascript:refreshNetstatTcp()"></span>
 			</h3><pre><div id="raw_netstat_tcp"></div></pre>
 		</div>
 	</div>
