--- a/templates/configuration.html
+++ b/templates/configuration.html
@@ -3,6 +3,10 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
 
+	<style type="text/css">
+	span.refreshButton { font-size: small; text-align: right; float: right; position: relative; top: 6pt }
+	</style>
+
 	<title>Probe - Configuration [%(hostname)s]</title>
 </head>
 <body>
@@ -30,20 +34,20 @@
 	</form>
 
 	<h3><tt>uname</tt>
-		<button class="btn btn-success" onclick="javascript:refreshUname()"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
+		<span class="glyphicon glyphicon-refresh refreshButton" aria-hidden="true" onclick="javascript:refreshUname()"></span>
 	</h3>
 	<pre><div id="raw_uname"></div></pre>
 
 	<div class="row">
 		<div class="col-md-6">
 			<h3><tt>ifconfig</tt>
-				<button class="btn btn-success" onclick="javascript:refreshIfconfig()"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
+				<span class="glyphicon glyphicon-refresh refreshButton" aria-hidden="true" onclick="javascript:refreshIfconfig()"></span>
 			</h3>
 			<pre><div id="raw_ifconfig"></div></pre>
 		</div>
 		<div class="col-md-6">
 			<h3><tt>mount</tt>
-				<button class="btn btn-success" onclick="javascript:refreshMount()"><span class="glyphicon glyphicon-refresh" aria-hidden="true"></span></button>
+				<span class="glyphicon glyphicon-refresh refreshButton" aria-hidden="true" onclick="javascript:refreshMount()"></span>
 			</h3>
 			<pre><div id="raw_mount"></div></pre>
 		</div>
