--- a/templates/help.html
+++ b/templates/help.html
@@ -6,23 +6,33 @@
 	<title>Probe [%(hostname)s]</title>
 </head>
 <body>
+
+<nav class="navbar navbar-inverse navbar-fixed-top">
+	<div class="container">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="#"><span class="glyphicon glyphicon-cloud-download" aria-hidden="true" style="font-size: 0.8em"></span> Probe [<tt>%(hostname)s</tt>]</a>
+		</div>
+		<div id="navbar" class="navbar-collapse collapse">
+			<ul class="nav navbar-nav">
+				<li><a href="/">Status</a></li>
+				<li><a href="/configuration">Configuration</a></li>
+				<li class="active"><a href="#">Help</a></li>
+			</ul>
+		</div>
+	</div>
+</nav>
+<br />
+<br />
+<br />
+
 <div class="container" style="width: 90%%">
-	<h1>Probe - Help [<tt>%(hostname)s</tt>]</h1>
-
-	<form action="/" style="display: inline; padding-left: 20px">
-	<button class="btn btn-primary">
-		<span class="glyphicon glyphicon-home" aria-hidden="true"></span>
-		Status
-	</button>
-	</form>
-
-	<form action="/configuration" style="display: inline; padding-left: 20px">
-	<button class="btn btn-info">
-		<span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
-		Configuration
-	</button>
-	</form>
-
+	<h1>Help</h1>
 	<h3>API's</h3>
 	<ul>
 		<li>JSON<ul>
