Implemented JSON API

--- a/templates/help.html
+++ b/templates/help.html
@@ -36,9 +36,8 @@
 	<h3>API's</h3>
 	<ul>
 		<li>JSON<ul>
-			<li><a href="/json/hardware">Hardware</a></li>
-			<li><a href="/json/software">Software</a></li>
-			<li><a href="/json/status">Status</a></li>
+			<li><a href="/json/hardware">hardware</a></li>
+			<li><a href="/json/status">status</a></li>
 		</ul></li>
 		<li>Raw<ul>
 			<li><a href="/raw/date">date</a></li>
