Added admin front end for probe

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
 			</button>
 			<a class="navbar-brand" href="#"><span class="glyphicon glyphicon-cloud-download" aria-hidden="true" style="font-size: 0.8em"></span> Probe [<tt>%(hostname)s</tt>]</a>
 		</div>
@@ -27,6 +28,7 @@
 				<li class="active"><a href="#">Status</a></li>
 				<li><a href="/configuration">Configuration</a></li>
 				<li><a href="/help">Help</a></li>
+				<li><a href="/admin">Admin</a></li>
 			</ul>
 		</div>
 	</div>
