--- a/templates/admin.html
+++ b/templates/admin.html
@@ -7,7 +7,7 @@
 	span.refreshButton { font-size: small; text-align: right; float: right; position: relative; top: 6pt }
 	</style>
 
-	<title>Probe - Configuration [%(hostname)s]</title>
+	<title>Probe - Admin [%(hostname)s]</title>
 </head>
 <body>
 
@@ -25,9 +25,9 @@
 		<div id="navbar" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
 				<li><a href="/">Status</a></li>
-				<li class="active"><a href="#">Configuration</a></li>
+				<li><a href="#">Configuration</a></li>
 				<li><a href="/help">Help</a></li>
-				<li><a href="/admin">Admin</a></li>
+				<li class="active"><a href="/admin">Admin</a></li>
 			</ul>
 		</div>
 	</div>
@@ -37,45 +37,32 @@
 <br />
 
 <div class="container" style="width: 90%%">
-	<h1>Configuration</h1>
-
-	<button class="btn btn-success" onclick="javascript:refresh()">
-		<span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
-		Refresh All
-	</button>
-	<input id="autoRefreshCheckbox" type="checkbox" onclick="javascript:autoRefresh()"> Automatic
-
-	<h3><tt>uname</tt>
-		<span class="glyphicon glyphicon-refresh refreshButton" aria-hidden="true" onclick="javascript:refreshUname()"></span>
-	</h3>
-	<pre><div id="raw_uname"></div></pre>
+	<h1>Admin</h1>
 
 	<div class="row">
 		<div class="col-md-6">
-			<h3><tt>ifconfig</tt>
+			<h3><tt>git show</tt>
 				<span class="glyphicon glyphicon-refresh refreshButton" aria-hidden="true" onclick="javascript:refreshIfconfig()"></span>
 			</h3>
-			<pre><div id="raw_ifconfig"></div></pre>
+			<pre><div id="raw_gitshow"></div></pre>
 		</div>
 		<div class="col-md-6">
-			<h3><tt>mount</tt>
+			<h3><tt>git log</tt>
 				<span class="glyphicon glyphicon-refresh refreshButton" aria-hidden="true" onclick="javascript:refreshMount()"></span>
 			</h3>
-			<pre><div id="raw_mount"></div></pre>
+			<pre><div id="raw_gitlog"></div></pre>
 		</div>
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 	<script>
-		function refreshUname() { $('#raw_uname').load('/raw/uname'); }
-		function refreshIfconfig() { $('#raw_ifconfig').load('/raw/ifconfig'); }
-		function refreshMount() { $('#raw_mount').load('/raw/mount'); }
+		function refreshGitShow() { $('#raw_gitshow').load('/raw/gitShow'); }
+		function refreshGitLog() { $('#raw_gitlog').load('/raw/gitLog'); }
 
 		function refresh() {
-			refreshUname();
-			refreshIfconfig();
-			refreshMount();
+			refreshGitShow();
+			refreshGitLog();
 		}
 
 		function autoRefresh() {
