--- a/templates/help.html
+++ b/templates/help.html
@@ -23,6 +23,7 @@
 				<li><a href="/">Status</a></li>
 				<li><a href="/configuration">Configuration</a></li>
 				<li class="active"><a href="#">Help</a></li>
+				<li><a href="/admin">Admin</a></li>
 			</ul>
 		</div>
 	</div>
