--- a/templates/admin.html
+++ b/templates/admin.html
@@ -39,29 +39,24 @@
 <div class="container" style="width: 90%%">
 	<h1>Admin</h1>
 
-	<div class="row">
-		<div class="col-md-6">
-			<h3><tt>git show</tt>
-				<span class="glyphicon glyphicon-refresh refreshButton" aria-hidden="true" onclick="javascript:refreshIfconfig()"></span>
-			</h3>
-			<pre><div id="raw_gitshow"></div></pre>
-		</div>
-		<div class="col-md-6">
-			<h3><tt>git log</tt>
-				<span class="glyphicon glyphicon-refresh refreshButton" aria-hidden="true" onclick="javascript:refreshMount()"></span>
-			</h3>
-			<pre><div id="raw_gitlog"></div></pre>
-		</div>
-	</div>
+	<h3><tt>git rev-parse HEAD</tt>
+		<span class="glyphicon glyphicon-refresh refreshButton" aria-hidden="true" onclick="javascript:refreshGitRevision()"></span>
+	</h3>
+	<pre><div id="raw_gitrevision"></div></pre>
+
+	<h3><tt>git log</tt>
+		<span class="glyphicon glyphicon-refresh refreshButton" aria-hidden="true" onclick="javascript:refreshGitLog()"></span>
+	</h3>
+	<pre><div id="raw_gitlog"></div></pre>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 	<script>
-		function refreshGitShow() { $('#raw_gitshow').load('/raw/gitShow'); }
+		function refreshGitRevision() { $('#raw_gitrevision').load('/raw/gitRevision'); }
 		function refreshGitLog() { $('#raw_gitlog').load('/raw/gitLog'); }
 
 		function refresh() {
-			refreshGitShow();
+			refreshGitRevision();
 			refreshGitLog();
 		}
 
