Stubbed out updating and factored out titles

--- a/templates/configuration.html
+++ b/templates/configuration.html
@@ -7,7 +7,7 @@
 	span.refreshButton { font-size: small; text-align: right; float: right; position: relative; top: 6pt }
 	</style>
 
-	<title>Probe - Configuration [%(hostname)s]</title>
+	<title>Probe - %(title)s [%(hostname)s]</title>
 </head>
 <body>
 
@@ -37,7 +37,7 @@
 <br />
 
 <div class="container" style="width: 90%%">
-	<h1>Configuration</h1>
+	<h1>%(title)s</h1>
 
 	<button class="btn btn-success" onclick="javascript:refresh()">
 		<span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
