--- a/templates/help.html
+++ b/templates/help.html
@@ -3,7 +3,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
 
-	<title>Probe [%(hostname)s]</title>
+	<title>Probe - %(title)s [%(hostname)s]</title>
 </head>
 <body>
 
@@ -33,7 +33,7 @@
 <br />
 
 <div class="container" style="width: 90%%">
-	<h1>Help</h1>
+	<h1>%(title)s</h1>
 	<h3>API's</h3>
 	<ul>
 		<li>JSON<ul>
