--- a/templates/admin.html
+++ b/templates/admin.html
@@ -7,7 +7,7 @@
 	span.refreshButton { font-size: small; text-align: right; float: right; position: relative; top: 6pt }
 	</style>
 
-	<title>Probe - Admin [%(hostname)s]</title>
+	<title>Probe - %(title)s [%(hostname)s]</title>
 </head>
 <body>
 
@@ -25,9 +25,9 @@
 		<div id="navbar" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
 				<li><a href="/">Status</a></li>
-				<li><a href="#">Configuration</a></li>
+				<li><a href="/configuration">Configuration</a></li>
 				<li><a href="/help">Help</a></li>
-				<li class="active"><a href="/admin">Admin</a></li>
+				<li class="active"><a href="#">Admin</a></li>
 			</ul>
 		</div>
 	</div>
@@ -37,7 +37,17 @@
 <br />
 
 <div class="container" style="width: 90%%">
-	<h1>Admin</h1>
+	<h1>%(title)s</h1>
+
+	<button class="btn btn-success" onclick="javascript:refresh()">
+		<span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
+		Refresh All
+	</button>
+
+	<button class="btn btn-warning" onclick="javascript:update()" style="display: inline">
+		<span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span>
+		Update
+	</button>
 
 	<h3><tt>git rev-parse HEAD</tt>
 		<span class="glyphicon glyphicon-refresh refreshButton" aria-hidden="true" onclick="javascript:refreshGitRevision()"></span>
@@ -65,6 +75,10 @@
 			if ($('#autoRefreshCheckbox').prop('checked')) {
 				setTimeout(autoRefresh, 5000);
 			}
+		}
+
+		function update() {
+			//TODO
 		}
 
 		refresh();
