--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 	span.refreshButton { font-size: small; text-align: right; float: right; position: relative; top: 6pt }
 	</style>
 
-	<title>Probe [%(hostname)s]</title>
+	<title>Probe - %(title)s [%(hostname)s]</title>
 </head>
 <body>
 
@@ -38,7 +38,7 @@
 <br />
 
 <div class="container" style="width: 90%%">
-	<h1>Status</h1>
+	<h1>%(title)s</h1>
 
 	<button class="btn btn-success" onclick="javascript:refresh()">
 		<span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
