--- a/templates/configuration.html
+++ b/templates/configuration.html
@@ -58,6 +58,11 @@
 			<pre><div id="raw_ifconfig"></div></pre>
 		</div>
 		<div class="col-md-6">
+			<h3><tt>numactl -H</tt>
+				<span class="glyphicon glyphicon-refresh refreshButton" aria-hidden="true" onclick="javascript:refreshNumactlHardware()"></span>
+			</h3>
+			<pre><div id="raw_numactlHardware"></div></pre>
+
 			<h3><tt>mount</tt>
 				<span class="glyphicon glyphicon-refresh refreshButton" aria-hidden="true" onclick="javascript:refreshMount()"></span>
 			</h3>
@@ -71,6 +76,7 @@
 		function refreshUname() { $('#raw_uname').load('/raw/uname'); }
 		function refreshIfconfig() { $('#raw_ifconfig').load('/raw/ifconfig'); }
 		function refreshMount() { $('#raw_mount').load('/raw/mount'); }
+		function refreshNumactlHardware() { $('#raw_numactlHardware').load('/raw/numactlHardware'); }
 
 		function refresh() {
 			refreshUname();
