Add missing default refresh too

--- a/templates/index.html
+++ b/templates/index.html
@@ -99,6 +99,7 @@
 		function refresh() {
 			refreshDate();
 			refreshUptime();
+			refreshEntropyAvail();
 			refreshDf();
 			refreshIostat();
 			refreshNetstatUdp();
