Add missing link to help

--- a/templates/help.html
+++ b/templates/help.html
@@ -43,6 +43,7 @@
 		<li>Raw<ul>
 			<li><a href="/raw/date">date</a></li>
 			<li><a href="/raw/df">df</a></li>
+			<li><a href="/raw/entropyAvail">entropyAvail</a></li>
 			<li><a href="/raw/ifconfig">ifconfig</a></li>
 			<li><a href="/raw/iostat">iostat</a></li>
 			<li><a href="/raw/mount">mount</a></li>
