Anonymize remaining commands that were too identifying, closing #6

--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
 			</h3>
 			<pre><div id="raw_entropy_avail"></div></pre>
 
-			<h3><tt>df</tt>
+			<h3><tt>df (anonymized)</tt>
 				<span class="glyphicon glyphicon-refresh refreshButton" aria-hidden="true" onclick="javascript:refreshDf()"></span>
 			</h3>
 			<pre><div id="raw_df"></div></pre>
