--- a/templates/configuration.html
+++ b/templates/configuration.html
@@ -52,7 +52,7 @@
 
 	<div class="row">
 		<div class="col-md-6">
-			<h3><tt>ifconfig</tt>
+			<h3><tt>ifconfig (anonymized)</tt>
 				<span class="glyphicon glyphicon-refresh refreshButton" aria-hidden="true" onclick="javascript:refreshIfconfig()"></span>
 			</h3>
 			<pre><div id="raw_ifconfig"></div></pre>
