Remove the raw application and replace UI with cleaner one based on JSON API (closing #8)

--- a/templates/help.html
+++ b/templates/help.html
@@ -21,7 +21,6 @@
 		<div id="navbar" class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
 				<li><a href="/">Status</a></li>
-				<li><a href="/configuration">Configuration</a></li>
 				<li class="active"><a href="#">Help</a></li>
 				<li><a href="/admin">Admin</a></li>
 			</ul>
@@ -34,24 +33,10 @@
 
 <div class="container" style="width: 90%%">
 	<h1>%(title)s</h1>
-	<h3>API's</h3>
+	<h3>JSON API's</h3>
 	<ul>
-		<li>JSON<ul>
-			<li><a href="/json/hardware">hardware</a></li>
-			<li><a href="/json/status">status</a></li>
-		</ul></li>
-		<li>Raw<ul>
-			<li><a href="/raw/date">date</a></li>
-			<li><a href="/raw/df">df</a></li>
-			<li><a href="/raw/entropyAvail">entropyAvail</a></li>
-			<li><a href="/raw/ifconfig">ifconfig</a></li>
-			<li><a href="/raw/iostat">iostat</a></li>
-			<li><a href="/raw/mount">mount</a></li>
-			<li><a href="/raw/netstatTcp">netstat (TCP)</a></li>
-			<li><a href="/raw/netstatUdp">netstat (UDP)</a></li>
-			<li><a href="/raw/uname">uname</a></li>
-			<li><a href="/raw/uptime">uptime</a></li>
-		</ul></li>
+		<li><a href="/json/hardware">Hardware</a></li>
+		<li><a href="/json/status">Status</a></li>
 	</ul>
 </div>
 </body>
