--- a/templates/help.html
+++ b/templates/help.html
@@ -30,12 +30,12 @@
 <br />
 <br />
 
-<div class="container" style="width: 90%%">
+<div class="container">
 	<h1>%(title)s</h1>
 	<h3>JSON API's</h3>
 	<ul>
-		<li><a href="/json/hardware">Hardware</a></li>
-		<li><a href="/json/status">Status</a></li>
+		<li><a href="/api/hardware">Hardware</a></li>
+		<li><a href="/api/status">Status</a></li>
 	</ul>
 </div>
 </body>
